Issue #MKDBIGI-28 by cableman: Fixed z-index issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,3 +55,10 @@
 .modalDialog .content {
   padding: 10px;
 }
+
+/******************
+ * Fixes
+ ******************/
+.app-wrapper, #map {
+  z-index: 1;
+}
